# kulli

./: .gitignore  CMakeLists.txt  Makefile  README.md  parsing.c
lib/: std.kulli  std.musti
src/: builtin_functions.c  builtin_functions.h  eval.c  eval.h  lang.h  lval.c  lval.h  main.c  mpc.c  mpc.h  parsing.c  parsing.h
